--- a/manifest.json
+++ b/manifest.json
@@ -3,42 +3,42 @@
   "short_name": "O Aventureiro",
   "icons": [
     {
-      "src": "/the_travaler/assets/icons/app-icon-48x48.png",
+      "src": "assets/icons/app-icon-48x48.png",
       "type": "image/png",
       "sizes": "48x48"
     },
     {
-      "src": "/the_travaler/assets/icons/app-icon-96x96.png",
+      "src": "assets/icons/app-icon-96x96.png",
       "type": "image/png",
       "sizes": "96x96"
     },
     {
-      "src": "/the_travaler/assets/icons/app-icon-144x144.png",
+      "src": "assets/icons/app-icon-144x144.png",
       "type": "image/png",
       "sizes": "144x144"
     },
     {
-      "src": "/the_travaler/assets/icons/app-icon-192x192.png",
+      "src": "assets/icons/app-icon-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "/the_travaler/assets/icons/app-icon-256x256.png",
+      "src": "assets/icons/app-icon-256x256.png",
       "type": "image/png",
       "sizes": "256x256"
     },
     {
-      "src": "/the_travaler/assets/icons/app-icon-384x384.png",
+      "src": "assets/icons/app-icon-384x384.png",
       "type": "image/png",
       "sizes": "384x384"
     },
     {
-      "src": "/the_travaler/assets/icons/app-icon-512x512.png",
+      "src": "assets/icons/app-icon-512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
-  "start_url": "/the_travaler/index.html",
+  "start_url": "index.html",
   "scope": ".",
   "display": "fullscreen",
   "orientation": "landscape-primary",
